--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "my-vue-app",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.2.25"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
-    "vite": "^2.7.2"
-  }
+    "name": "my-vue-app",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "postcss-import": "^14.0.2",
+        "vue": "^3.2.25"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^2.0.0",
+        "autoprefixer": "^10.4.0",
+        "firebase": "^9.6.1",
+        "postcss": "^8.4.5",
+        "sass": "^1.45.1",
+        "tailwindcss": "^3.0.7",
+        "vite": "^2.7.2"
+    }
 }
