--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     },
     "dependencies": {
         "postcss-import": "^14.0.2",
-        "vue": "^3.2.25"
+        "vue": "^3.2.25",
+        "vue-router": "4"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.0.0",
         "autoprefixer": "^10.4.0",
+        "eslint": "^8.5.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-vue": "^8.2.0",
         "firebase": "^9.6.1",
         "postcss": "^8.4.5",
+        "prettier": "^2.5.1",
         "sass": "^1.45.1",
         "tailwindcss": "^3.0.7",
-        "vite": "^2.7.2"
+        "vite": "^2.7.2",
+        "vuex": "^4.0.2"
     }
 }
